Second Section Added

--- a/index.html
+++ b/index.html
@@ -18,5 +18,17 @@
            </div>
         </div>
     </header>
+    <main>
+        <section class="deals">
+            <div class="off">
+                <h5>65% OFF</h5>
+            </div>
+            <div class="deals-content">
+                <p class="small-title">OUR HOLIDAY DEALS ARE BETTER</p>
+                <p class="large-title">ALL CATEGORIES</p>
+                <img src="images/New Year Photo.png" alt="">
+            </div>
+        </section>
+    </main>
 </body>
 </html>
