added welcome card

--- a/index.html
+++ b/index.html
@@ -29,6 +29,14 @@
                 <img src="images/New Year Photo.png" alt="">
             </div>
         </section>
+        <section class="welcome-card">
+            <div class="welcome-texts">
+                <h2>Welcome to midnight party</h2>
+                <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+                <button class="btn-primary">Join Now</button>
+            </div>
+            <img src="images/Group 70.png" alt="">
+        </section>
     </main>
 </body>
 </html>
