Last Section Setup

--- a/index.html
+++ b/index.html
@@ -37,6 +37,21 @@
             </div>
             <img src="images/Group 70.png" alt="">
         </section>
+        <section class="coming-soon">
+            <div class="text-content">
+                <p>NEW BEST OFFER</p>
+                <h3>Coming Soon</h3>
+                <p class="soon-para">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+            </div>
+            <div class="circular-image">
+                <img src="images/Ellipse 1.png" alt="">
+            </div>
+            <div class="date">
+                <p class="bold-date">2024</p>
+                <p class="soon-para">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed.</p>
+                <img src="images/Group 96.png" alt="">
+            </div>
+        </section>
     </main>
 </body>
 </html>
