--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </section>
         <section class="coming-soon">
             <div class="text-content">
-                <p>NEW BEST OFFER</p>
+                <p class="offer-title">NEW BEST OFFER</p>
                 <h3>Coming Soon</h3>
                 <p class="soon-para">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
             </div>
